--- a/templates/friendslist.html
+++ b/templates/friendslist.html
@@ -32,18 +32,20 @@
                         data-bs-target="#collapse{{forloop.counter}}" aria-expanded="true"
                         aria-controls="collapse{{forloop.counter}}">
                         <h5>{{profile.user.first_name}} {{profile.user.last_name}} ({{profile.user.username}})</h5>
+                        
                     </button>
-
-
                     
-
-
-
-
                 </h2>
+
                 <div id="collapse{{forloop.counter}}" class="accordion-collapse collapse" aria-labelledby="headingOne"
                     data-bs-parent="#{{profile.user.username}}">
                     <div class="accordion-body">
+                        <form class="mb-2" action="{% url 'unfriend_user' %}" method="post">
+                            {% csrf_token %}
+                            
+                            <button class="btn btn-outline-primary py-1" name="username" type="submit"
+                                value={{profile.user.username}}>Unfriend User</button>
+                        </form>
                         {%if profile.saved_courses == None%}
                         <p>This user doesn't have any saved courses</p>
                         {%else%}
