--- a/templates/profile_detail_view.html
+++ b/templates/profile_detail_view.html
@@ -4,11 +4,13 @@
 {% block content %}
 
 <div class="container rounded bg-white mt-5 mb-5">
-    <h1>User {{object.user.username}}</h1>
-
+    <h1>{{object.user.first_name}} {{object.user.last_name}} ({{object.user.username}})</h1>
+    <br/>
+    <h3 class="text-primary"> Courses</h3>
     <ul class="list-group">
         {%for section in object.saved_sections.all%}
-            <li class="list-group-item"> 
+            <li class="list-group-item bg-light"> 
+                <h5>{{section.course}}</h5>
 
                 <div class="row py-1">
                     <div class="col-1">{{section.course_number}}-{{section.course_section}}</div>
@@ -20,12 +22,7 @@
                             <div >{{meeting}} | {{meeting.facility_description}}</div>
                         {%endfor%}
                     </div> 
-                    <div class="col-2 d-flex align-items-center">
-                        <form class="" action="{% url 'section_page' course.subject course.catalog_number section.course_number %}" method="post">
-                            {% csrf_token %}
-                            <button class="btn btn-secondary" type="submit" >Section Info</button>
-                        </form>
-                    </div> 
+                    
 
                 </div>
             </li>
@@ -33,6 +30,17 @@
         {%endfor%}
 
     </ul>
+    <br/>
+
+    <h4>Leave a comment:</h4>
+
+    {%for %}
+    <ul class="list-group"> 
+        <li class="list-group-item"> 
+            Comment
+        </li>
+    </ul>
+
 </div>
 
 
