--- a/templates/profile_detail_view.html
+++ b/templates/profile_detail_view.html
@@ -54,7 +54,7 @@
         <div class="commentbox">
             <input type="hidden" name="next" value="{{request.path}}"/>
             <input type="hidden" name="username" value="{{object.user.username}}"/>
-            <textarea name="comment" placeholder="Leave a comment..." rows="4%" cols="100%"></textarea>
+            <textarea name="comment" placeholder="Leave a comment..." rows="3" cols="100%"></textarea>
             <button class="btn btn-success" type="submit">Comment</button>
         </div>
     </form>
