--- a/templates/search_users_results.html
+++ b/templates/search_users_results.html
@@ -30,50 +30,52 @@
     <div>
         <h5>Search Results for "{{search_query}}":</h5>
         {%if object_list%}
-            
-            <div class='accordion' id="{{profile.user.username}}">
+            <ul class="list-group">
                 {% for profile in object_list %}
-                    <div class='accordion-item'> 
-                        <h2 class="accordion-header" id="{{ profile.user.username }}">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{forloop.counter}}" aria-expanded="true" aria-controls="collapse{{forloop.counter}}">
-                                <h5>{{profile.user.first_name}} {{profile.user.last_name}} ({{profile.user.username}})</h5>
-                            </button>
-                        </h2>
-                        <div id="collapse{{forloop.counter}}" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#{{profile.user.username}}">
-                            <div class="accordion-body">
-                                {%if profile in current_user_profile.friends.all%}
-                                    <form class="mb-2" action="{% url 'unfriend_user' %}" method="post">
-                                        {% csrf_token %}
-                                        
-                                        <button class="btn btn-outline-primary py-0" name="username" type="submit"
-                                            value={{profile.user.username}}>Unfriend User</button>
-                                    </form>
-                                {% else %}
+                    <li class="list-group-item d-flex justify-content-between">
+                        <h4>{{profile}}</h4>
+                        <div class="d-flex gap-3">
+                        <a class="btn btn-outline-info" href="{% url 'profile_detail_view' profile.user.username%}">View profile</a>
 
-                                    <form class="mb-2" action="{% url 'friend_user' %}" method="post">
-                                        {% csrf_token %}
-                                        
-                                        <button class="btn btn-outline-primary py-0" name="username" type="submit" value="{{profile.user.username}}">Friend
-                                            User</button>
-                                    </form>
+                        {%if profile in user.profile.friends.all%}
+                        <form class="" action="{% url 'unfriend_user' %}" method="post">
+                            {% csrf_token %}
+                            
+                            <button class="btn btn-outline-primary" name="username" type="submit"
+                                value={{profile.user.username}}>Unfriend User</button>
+                        </form>
+                        {% else %}
 
-                                {% endif %}
-                                {%if profile.saved_courses == None%}
-                                    <p>This user doesn't have any saved courses</p>
-                                {%else%}
-                                    <ul>
-                                        {%for section in profile.saved_sections.all%}
+                            <form class="" action="{% url 'friend_user' %}" method="post">
+                                {% csrf_token %}
+                                
+                                <button class="btn btn-outline-primary" name="username" type="submit" value="{{profile.user.username}}">Friend
+                                    User</button>
+                            </form>
 
-                                            <li>{{section.course}} ({{section.course_section}})</li>
-                                        {%endfor%}
-                                    </ul>
-                                {%endif%}
-                            </div>
+                        {% endif %}
                         </div>
-                    {% comment %} {{ profile.user.username }}, {{profile.user.email}}, {{ profile.year }} {% endcomment %}
-                    </div>
+                    </li>
+                    {% comment %} {%if profile in current_user_profile.friends.all%}
+                        <form class="mb-2" action="{% url 'unfriend_user' %}" method="post">
+                            {% csrf_token %}
+                            
+                            <button class="btn btn-outline-primary py-0" name="username" type="submit"
+                                value={{profile.user.username}}>Unfriend User</button>
+                        </form>
+                    {% else %}
+
+                        <form class="mb-2" action="{% url 'friend_user' %}" method="post">
+                            {% csrf_token %}
+                            
+                            <button class="btn btn-outline-primary py-0" name="username" type="submit" value="{{profile.user.username}}">Friend
+                                User</button>
+                        </form>
+
+                    {% endif %} {% endcomment %}
+                               
                 {% endfor %}
-            </div>
+            </ul>
         {%else%}
             <p class="text-danger">No results, please try a different search.</p>
         {% endif%}
