--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,13 @@
     {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">New Lou's List</a>
+            
+                
+                    <a1  class="navbar-brand" href="/" >New Lou's List</a1>
+                
+            <!-- <a class="navbar-brand" href="/"  >New Lou's List</a> -->
+            
+
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" href="/search">Home</a>
