--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -4,6 +4,10 @@
 
 <html>
 <center>
+    
+        
+    
+    
     <br>
     <div style="padding-left:20px">
         {% comment %} <div class="search">
@@ -63,15 +67,56 @@
             </form>
         </div>
         <br/> {% endcomment %}
-        <div class="search4">
-            <p> <strong> Search for a course or instructor: </strong> </p>
+        <div1    class="search4">
+            <!-- <p> <strong> Search for a course or instructor: </strong> </p> -->
             <form action="{% url 'search_general_results' %}" method="get">
-                <input name="q" type="text" placeholder="Search course or instructor" size="22"/>
-                <button type="submit">Search</button>
+                <input  name="q" type="text" placeholder="Search Course or Instructor"  style="height:50px; width:600px"/>
+                <div2 class="ye">
+                    <button type="submit" style="height:52px; width:100px">Search</button>
+                </div2>
+                
             </form>
 
-        </div>
+        </div1>
+
+        
     </div>
+    <style>
+        .search4 {
+
+            position: absolute;
+  right: 820px;
+  width: 300px;
+  bottom: 350px;
+  
+  
+        }
+
+        .ye {
+    position: absolute;
+  
+  bottom: -1px;
+  right: -400px;
+  }
+  input {
+  text-align: center;
+}
+input,
+input::placeholder {
+    font: 20px/3 sans-serif;
+}
+    </style>
+    <!-- <img src="https://www.kget.com/wp-content/uploads/sites/2/2020/06/70af0a8f43d943ec8131175a70fffc8d.jpg?w=2560&amp;h=1440&amp;crop=1" width="700" 
+     height="500" > -->
+    <style>
+        body {
+            background-image: url('https://www.kget.com/wp-content/uploads/sites/2/2020/06/70af0a8f43d943ec8131175a70fffc8d.jpg?w=2560&amp;h=1440&amp');
+            background-repeat: repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            background-size: 5% 5%;
+        }
+    </style>
 </center>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
