--- a/templates/saved_courses.html
+++ b/templates/saved_courses.html
@@ -3,9 +3,10 @@
 
 <html>
 
-<body>
+<body style="background-color:navy;">
     <div class="container">
-        <h1 class=""> Saved Courses </h1>
+        <br>
+        <!-- <h1 class=""> Saved Courses </h1> -->
         {% if sections%}
         {%for section in sections%}
             <ul class="list-group">
