--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Profile Page{% endblock title %}
 {% block content %}
+<body style="background-color:navy;">
 <div class="form-content">
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
@@ -58,3 +59,4 @@
                 <li><a class="dropdown-item" href="logout/">Logout</a></li>
             </ul>
         </li>
+        </body>
