--- a/templates/search_users_page.html
+++ b/templates/search_users_page.html
@@ -5,7 +5,7 @@
 {% load socialaccount %}
 {% block content %}
 
-<head>
+<head >
 <style>
     
 
@@ -13,19 +13,43 @@
 
 </head>
 
-<html>
+<html >
+    <body style="background-color:navy">
 <center>
-<h1> Search for a User </h1>
+<!-- <h1> Search for a User </h1> -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <form action="{% url 'search_users_results_view' %}" method="get">
-    <input name="q" type="text" placeholder="Search..."/>
+    <input name="q" type="text" placeholder="Search for a User" style="height:50px; width:600px"/>
+    <button type="submit" style="height:50px; width:100px">Search</button>
 </form>
+
+<style>
+
+    input,
+input::placeholder {
+    font: 20px/3 sans-serif;
+}
+
+input {
+  text-align: center;
+}
+</style>
+
 
 <center
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-
+</body>
 </html>
 
 {% endblock content %}
