--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,6 +7,8 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
+<html>
+<body>
 <div class="text-center">
     <h1>{% trans "Sign Up" %}</h1>
 
@@ -26,4 +28,6 @@
         </form>
     </div>
 </div>
+</body>
+</html>
 {% endblock %}
