--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,13 +1,23 @@
 {% extends 'base.html' %}
 {% block title %}Logout{% endblock title %}
 {% block content %}
+<body style="background-color:orange;">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="row justify-content-center">
 <div class="text-center" style="width: 30rem;">
     <div class="card-body">
-        <h5 class="card-title">You have been logged out</h5>
+        <h5 class="card-title">You Have Been Logged Out</h5>
         <br>
         <hr><a href="{% url 'login' %}" class="btn btn-primary">Sign in again</a>
     </div>
 </div>
 </div>
+</body>
 {% endblock content %}
