--- a/templates/saved_courses.html
+++ b/templates/saved_courses.html
@@ -2,6 +2,7 @@
 {% block title %}Profile Page{% endblock title %}
 {% block content %}
 
+<body style="background-color:navy;">
 <style>
     .commentbox{
         display:inline-block;
@@ -62,6 +63,6 @@
     {%endif%}
 
 </div>
-
+</body>
 
 {% endblock content %}
