--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -8,7 +8,7 @@
     <div class=" outer-div d-flex justify-content-center align-items-center">
             <!-- <p> <strong> Search for a course or instructor: </strong> </p> -->
         <form class="" action="{% url 'search_general_results' %}" method="get">
-            <input  name="q" type="text" placeholder="Search Course or Instructor"  style="height:50px; width:600px"/>
+            <input  name="q" type="text" placeholder="Search by Department, Course Number, or Instructor"  style="height:50px; width:600px"/>
                 <button class="btn-primary" type="submit" style="height:52px; width:100px">Search</button>
             
         </form>
