update departments page

--- a/templates/departments.html
+++ b/templates/departments.html
@@ -412,8 +412,194 @@
         {% if course.subject == 'MUSI' %}
             <li class="list-group-item" name="course"> {{course.subject}} - Music </li>
         {% endif %}
-
+        {% if course.subject == 'NASC' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Naval Science </li>
+        {% endif %}
+        {% if course.subject == 'NCPR' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Non-Credit Professional Review </li>
+        {% endif %}
+        {% if course.subject == 'NESC' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Neuroscience </li>
+        {% endif %}
+        {% if course.subject == 'NUCO' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Nursing Core </li>
+        {% endif %}
+        {% if course.subject == 'NUIP' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Nursing Interprofessional </li>
+        {% endif %}
+        {% if course.subject == 'NURS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Nursing </li>
+        {% endif %}
+        {% if course.subject == 'PATH' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Pathology </li>
+        {% endif %}
+        {% if course.subject == 'PC' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Procurement and Contracts Management </li>
+        {% endif %} 
+        {% if course.subject == 'PERS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Persian </li>
+        {% endif %}
+        {% if course.subject == 'PETR' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Persian in Translation</li>
+        {% endif %}
+        {% if course.subject == 'PHAR' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Pharmacology </li>
+        {% endif %}
+        {% if course.subject == 'PHIL' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Philosophy </li>
+        {% endif %}
+        {% if course.subject == 'PHS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Public Health Sciences </li>
+        {% endif %}
+        {% if course.subject == 'PHY' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Physiology </li>
+        {% endif %}
+        {% if course.subject == 'PHYS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Physics </li>
+        {% endif %}
+        {% if course.subject == 'PLAC' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Planning Application </li>
+        {% endif %}
+        {% if course.subject == 'PLAD' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Politics-Departmental Seminar </li>
+        {% endif %}
+        {% if course.subject == 'PLAN' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Urban and Environmental Planning </li>
+        {% endif %}
+        {% if course.subject == 'PLAP' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Politics-American Politics </li>
+        {% endif %}
+        {% if course.subject == 'PLCP' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Politics-Comparative Politics </li>
+        {% endif %}
+        {% if course.subject == 'PLIR' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Politics-International Relations </li>
+        {% endif %}
+        {% if course.subject == 'PLPT' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Politics-Political Theory </li>
+        {% endif %}
+        {% if course.subject == 'POL' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Polish </li>
+        {% endif %}
+        {% if course.subject == 'PORT' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Portuguese </li>
+        {% endif %}
+        {% if course.subject == 'POTR' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Portuguese in Translation </li>
+        {% endif %}
+        {% if course.subject == 'PPL' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Political Philosophy, Policy, and Law </li>
+        {% endif %}
+        {% if course.subject == 'PSHM' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Professional Studies-Health Sciences Management </li>
+        {% endif %}
+        {% if course.subject == 'PSLP' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - PS-Leadership Program </li>
+        {% endif %}
+        {% if course.subject == 'PSPA' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Professional Studies-Public Administration </li>
+        {% endif %}
+        {% if course.subject == 'PSPM' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Professional Studies-Project Management </li>
+        {% endif %}
+        {% if course.subject == 'PSPS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Professional Studies-Public Safety </li>
+        {% endif %}
+        {% if course.subject == 'PST' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Political and Social Thought </li>
+        {% endif %}
+        {% if course.subject == 'PYSC' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Pyschology </li>
+        {% endif %}
+        {% if course.subject == 'RELA' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Religion-African Religions </li>
+        {% endif %}
+        {% if course.subject == 'RELB' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Religion-Buddhism </li>
+        {% endif %}
+        {% if course.subject == 'RELC' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Religion-Christianity </li>
+        {% endif %}
+        {% if course.subject == 'RELG' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Religion-General Religion </li>
+        {% endif %}
+        {% if course.subject == 'RELH' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Religion-Hinduism </li>
+        {% endif %}
+        {% if course.subject == 'RELI' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Religion-Islam </li>
+        {% endif %}
+        {% if course.subject == 'RELJ' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Religion-Judaism </li>
+        {% endif %}
+        {% if course.subject == 'RELS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Religion-Special Topics </li>
+        {% endif %}
+        {% if course.subject == 'RUSS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Russian </li>
+        {% endif %}
+        {% if course.subject == 'RUTR' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Russian in Translation </li>
+        {% endif %}
+        {% if course.subject == 'SANS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Sanskrit </li>
+        {% endif %}
+        {% if course.subject == 'SARC' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Architecture School </li>
+        {% endif %}
+        {% if course.subject == 'SAST' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - South Asian Studies </li>
+        {% endif %}
+        {% if course.subject == 'SATR' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - South Asian Literature in Translation </li>
+        {% endif %}
+        {% if course.subject == 'SEC' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - CYB SEC Analysis </li>
+        {% endif %}
+        {% if course.subject == 'SLAV' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Slavic </li>
+        {% endif %}
+        {% if course.subject == 'SLTR' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Slavic in Translation </li>
+        {% endif %}
+        {% if course.subject == 'SOC' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Sociology </li>
+        {% endif %}
+        {% if course.subject == 'SPAN' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Spanish </li>
+        {% endif %}
+        {% if course.subject == 'STAT' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Statistics </li>
+        {% endif %}
+        {% if course.subject == 'STS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Science, Technology, and Society </li>
+        {% endif %}
+        {% if course.subject == 'SWAH' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Swahili </li>
+        {% endif %}
+        {% if course.subject == 'SYS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Systems & Information Engineering </li>
+        {% endif %}
+        {% if course.subject == 'TURK' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Turkish </li>
+        {% endif %}
+        {% if course.subject == 'UD' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Urban Design </li>
+        {% endif %}
+        {% if course.subject == 'UNST' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - University Studies </li>
+        {% endif %}
+        {% if course.subject == 'URDU' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Urdu </li>
+        {% endif %}
+        {% if course.subject == 'USEM' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - University Seminar </li>
+        {% endif %}
+        {% if course.subject == 'WGS' %}
+            <li class="list-group-item" name="course"> {{course.subject}} - Women, Gender, and Sexuality </li>
+        {% endif %}
     </a>
     {%endfor%}
+</p>
 </ul>
 {% endblock content %}
