--- a/templates/saved_courses.html
+++ b/templates/saved_courses.html
@@ -2,7 +2,7 @@
 {% block title %}Profile Page{% endblock title %}
 {% block content %}
 
-<body style="background-color:navy;">
+<body style="background-color:gray;">
 <style>
     .commentbox{
         display:inline-block;
