--- a/templates/friendslist.html
+++ b/templates/friendslist.html
@@ -4,7 +4,7 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
 {% block content %}
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">  
 
 <head  >
     <style>
@@ -17,26 +17,27 @@
 </head>
 
 <html >
-    <body style="background-color:navy;">
+    <body style="background-color:gray;">
 <div class="container">
     
 
     <div>
         <br>
-        <!-- <h1>Friends</h1> -->
+        <center></center>
+         <h1>Friends</h1> 
         {%if object_list%}
             <ul class="list-group">
                 {% for profile in object_list %}
                     <li class="list-group-item d-flex justify-content-between">
                         <h4>{{profile}}</h4>
                         <div class="d-flex gap-3">
-                            <a class="btn btn-outline-info" href="{% url 'profile_detail_view' profile.user.username%}">View profile</a>
+                            <a class="btn btn-outline-info" style="background-color:black ; background:white;" href="{% url 'profile_detail_view' profile.user.username%}">View profile</a>
 
                             <form class="" action="{% url 'unfriend_user' %}" method="post">
                                 {% csrf_token %}
                                 
-                                <button class="btn btn-outline-primary" name="username" type="submit"
-                                    value={{profile.user.username}}>Unfriend User</button>
+                                <button type="button" class="btn btn-primary" name="username" style="background-color:red ;"
+                                    value={{profile.user.username}}>Unfriend <span class= "bi bi-trash"></span></button>
                             </form>
                         
                         </div>
@@ -45,8 +46,8 @@
                         <form class="mb-2" action="{% url 'unfriend_user' %}" method="post">
                             {% csrf_token %}
                             
-                            <button class="btn btn-outline-primary py-0" name="username" type="submit"
-                                value={{profile.user.username}}>Unfriend User</button>
+                            <button class="btn btn-outline-primary py-0" name="username" type="submit" style="background-color:red ;"
+                                value={{profile.user.username}}>Unfriend<span class= "bi bi-trash"></span></button>
                         </form>
                     {% else %}
 
