--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 {% block title %}Profile Page{% endblock title %}
 {% block content %}
 
-<body style="background-color:navy;">
+<body style="background-color:gray;">
     <div class="form-content">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
