--- a/templates/search_users_page.html
+++ b/templates/search_users_page.html
@@ -7,14 +7,54 @@
 
 <head >
 <style>
-    
+      body {
+            background-image: url('https://previews.123rf.com/images/denispc/denispc1903/denispc190300031/120256774-group-of-happy-cartoon-young-people-happy-friends-.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+            background-size: 25% 25%;
+        }
+        .button-9 {
+  appearance: button;
+  backface-visibility: hidden;
+  background-color: black;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+  font-size: 100%;
+  height: 44px;
+  line-height: 1.15;
+  margin: 12px 0 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+}
 
+.button-9:disabled {
+  cursor: default;
+}
+
+.button-9:focus {
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
+}
 </style>
 
 </head>
 
 <html >
-    <body style="background-color:navy">
+    <body style="background-color:gray" background=url>
 <center>
 <!-- <h1> Search for a User </h1> -->
 <br>
@@ -29,7 +69,7 @@
 
 <form action="{% url 'search_users_results_view' %}" method="get">
     <input name="q" type="text" placeholder="Search for a User" style="height:50px; width:600px"/>
-    <button type="submit" style="height:50px; width:100px">Search</button>
+    <button class="button-9" type="submit" style="height:50px; width:100px">Search</button>
 </form>
 
 <style>
