--- a/templates/home.html
+++ b/templates/home.html
@@ -73,7 +73,7 @@ body{
 <body>
     <header id="showcase">
         <h1>Welcome to The New Lou's List</h1>
-        <p>UVA's best class searcher</p>
+        <p>UVA course searcher for the Fall 2022 Semester</p>
         <p>You are currently logged in as {{user.username}}</p>
         <div id="container"> 
             <a href="/search" class="button">Search</a>
@@ -89,7 +89,7 @@ body{
 <body>
     <header id="showcase">
         <h1>Welcome to The New Lou's List</h1>
-        <p>UVA's best class searcher</p>
+        <p>UVA course searcher for the Fall 2022 Semester</p>
         <div id="container"> 
             <a href="/login" class="button">Sign In</a>
             <a href="/register" class="button">Sign Up</a>
