--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <head>
-    <title>New Lou's List</title>
+    <title>New Lou's List (Fall 2022)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         * {
@@ -73,7 +73,7 @@
         <div class="container-fluid">
             
                 
-                    <a1  class="navbar-brand" href="/" >New Lou's List</a1>
+                    <a1  class="navbar-brand" href="/" >New Lou's List (Fall 2022)</a1>
                 
             <!-- <a class="navbar-brand" href="/"  >New Lou's List</a> -->
             
