--- a/templates/logout.html
+++ b/templates/logout.html
@@ -15,7 +15,8 @@
     <div class="card-body">
         <h5 class="card-title">You Have Been Logged Out</h5>
         <br>
-        <hr><a href="{% url 'login' %}" class="btn btn-primary" style="background-color: black; border: black;" >Sign in again</a>
+        <hr><a href="{% url 'home' %}" class="btn btn-primary" style="background-color: black; border: black;" >Home</a>
+        <a href="{% url 'login' %}" class="btn btn-primary" style="background-color: black; border: black;" >Sign in again</a>
     </div>
 </div>
 </div>
