--- a/templates/profile_detail_view.html
+++ b/templates/profile_detail_view.html
@@ -19,6 +19,10 @@
       textarea{
         display:block;
       }
+
+      body{
+        background-color: orange;
+      }
 </style>
 <div class="container rounded bg-white mt-5 mb-5">
     <h1>{{object.user.first_name}} {{object.user.last_name}} ({{object.user.username}})</h1>
