--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <div class= "navbar-nav mr-auto">
             
                 
-                    <a1  class="navbar-brand" href="/" >New Lou's List (Fall 2022)</a1>
+                    <a  class="navbar-brand" href="/" >New Lou's List (Fall 2022)</a>
                 
             <!-- <a class="navbar-brand" href="/"  >New Lou's List</a> -->
             
