--- a/templates/friendslist.html
+++ b/templates/friendslist.html
@@ -12,19 +12,34 @@
             padding-bottom: 2em;
             padding-top: 1em;
         }
+        body {
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/University_of_Virginia_seal.svg/800px-University_of_Virginia_seal.svg.png');
+            background-size: cover;
+            background-attachment: fixed;
+            background-size: 15% 25%;
+        }
+
+        .friend{
+            font-weight: bold;
+            font: 100;
+            font-style: italic;
+            text-align: center;
+            max-width: fit-content;
+            background-color: white;
+            
+        }
     </style>
 
 </head>
 
 <html >
-    <body style="background-color:gray;">
+    <body style="background-color:orange;">
 <div class="container">
-    
 
     <div>
         <br>
         <center></center>
-         <h1>Friends</h1> 
+         <h1 class="friend">Friends</h1> 
         {%if object_list%}
             <ul class="list-group">
                 {% for profile in object_list %}
