--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,7 +1,15 @@
 {% extends 'base.html' %}
 {% block title %}Logout{% endblock title %}
 {% block content %}
-<body style="background-color:gray;">
+<style>
+    body {
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/University_of_Virginia_seal.svg/800px-University_of_Virginia_seal.svg.png');
+            background-size: cover;
+            background-attachment: fixed;
+            background-size: 25% 25%;
+        }
+</style>
+<body style="background-color:orange;">
 <br>
 <br>
 <br>
@@ -13,7 +21,7 @@
 <div class="row justify-content-center">
 <div class="text-center" style="width: 30rem;">
     <div class="card-body">
-        <h5 class="card-title">You Have Been Logged Out</h5>
+        <h3 class="card-title" style="background-color: white; max-width:fit;text-align:center">You Have Been Logged Out</h3>
         <br>
         <hr><a href="{% url 'home' %}" class="btn btn-primary" style="background-color: black; border: black;" >Home</a>
         <a href="{% url 'login' %}" class="btn btn-primary" style="background-color: black; border: black;" >Sign in again</a>
