--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -8,12 +8,13 @@
     <div class=" outer-div d-flex justify-content-center align-items-center">
             <!-- <p> <strong> Search for a course or instructor: </strong> </p> -->
         <form class="" action="{% url 'search_general_results' %}" method="get">
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD
             <p class="input-ins">Department input : APMA , ECON , CS , etc </p>
             <p class="input-ins">Course Number input : 1XXX , 2XXX , 3XXX , etc </p>
-            <p class="input-ins">Instructor input: First Name Last Name </p>
+            <p class="input-ins">Instructor input: First Name Last Name </p> -->
+            
 =======
->>>>>>> parent of 3acfcb1 (input instructions added)
+<!-- >>>>>>> parent of 3acfcb1 (input instructions added) -->
             <input  name="q" type="text" placeholder="Search by Department, Course Number, or Instructor"  style="height:50px; width:600px"/>
                 <button class="button-9" type="submit" style="height:52px; width:100px">Search</button>
             
@@ -23,7 +24,6 @@
         
     </div>
 <style>
-<<<<<<< HEAD
 .input-ins {
   color:black;
   text-indent: 30px;
@@ -31,9 +31,6 @@
   text-transform: uppercase;
   background-color: white;
 }
-=======
-
->>>>>>> parent of 3acfcb1 (input instructions added)
     .outer-div {
         height: 80vh;
         width: 100vw;
